# mysc2

./: README.md
agents/: LLM_terran_agent.py  actor_critic.py  base_terran_agent.py  dqn.py  learning_agent.py  pyproject.toml  random_agent.py  test_agent.py  zerg_agent.py  zerg_agent_vs_player.py
agents/multi_step_actions/: terran_multi_step_actions.py
agents/multi_step_actions/actions/: utils.py
