[tool.poetry]
name = "agents"
version = "0.1.0"
description = ""
authors = ["tasotaku_wsl <tasogaretakusann@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
pysc2 = "^4.0.0"
numpy = [
    {version = ">=1.26", python = ">=3.9"},
    {version = "<1.25", python = "3.8.*"}
]
scipy = [
    {version = ">=1.10,<1.12", python = ">=3.9,<3.10"},
    {version = ">=1.12,<1.15", python = ">=3.10,<3.13"}
]
protobuf = "3.20.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
